--- a/src/pages/wallets/wallets.scss
+++ b/src/pages/wallets/wallets.scss
@@ -1,3 +1,13 @@
-page-home {
+.fab ion-icon {
+  font-size: 3.6em;
+}
 
+ion-fab[bottom][right] {
+  right: 30px;
+  bottom: 30px;
+}
+
+button[ion-fab] {
+  height: 72px;
+  width: 72px;
 }
