Add some initial styling

--- a/src/pages/wallet-detail/wallet-detail.scss
+++ b/src/pages/wallet-detail/wallet-detail.scss
@@ -1,5 +1,5 @@
-.sky-header {
-  background-image: linear-gradient(-110deg, #4990e2, #b87eea);
+.sky-header-dark {
+  background-image: linear-gradient(-155deg, #686e96, #373b5c);
   width: 100%;
   height: 150px;
 }
