--- a/src/pages/wallets/wallets.scss
+++ b/src/pages/wallets/wallets.scss
@@ -1,3 +1,9 @@
+.sky-header-light {
+  background-image: linear-gradient(-110deg, #4990e2, #b87eea);
+  width: 100%;
+  height: 150px;
+}
+
 .fab ion-icon {
   font-size: 3.6em;
 }
