--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,3 +22,26 @@ h1 {
   font-size: 40px;
   margin: 0;
 }
+
+.split-background {
+  background-image: linear-gradient(bottom, #dddddd 50%, #4990e2 50%);
+  background-image: -o-linear-gradient(bottom, #dddddd 50%, #4990e2 50%);
+  background-image: -moz-linear-gradient(bottom, #dddddd 50%, #4990e2 50%);
+  background-image: -webkit-linear-gradient(bottom, #dddddd 50%, #4990e2 50%);
+  background-image: -ms-linear-gradient(bottom, #dddddd 50%, #4990e2 50%);
+}
+
+.material-paper {
+  margin-top: 50%;
+  min-height: 30%;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding: 5%;
+  background: white;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.inline-button {
+  display: inline-block;
+}
