Remove menu and add refresh button

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -45,3 +45,13 @@ h1 {
 .inline-button {
   display: inline-block;
 }
+
+.header-action-right {
+  display: inline-block;
+  font-size: 2.0em;
+  margin-right: 0.8em;
+}
+
+ion-buttons {
+  order: 1
+}
