Change display of wallets

--- a/src/pages/wallets/wallets.scss
+++ b/src/pages/wallets/wallets.scss
@@ -17,3 +17,13 @@ button[ion-fab] {
   height: 72px;
   width: 72px;
 }
+
+.line-left {
+  display: inline-block;
+  width: 60%;
+}
+
+.line-right {
+  display: inline-block;
+  width: 40%;
+}
