--- a/src/pages/wallets/wallets.scss
+++ b/src/pages/wallets/wallets.scss
@@ -1,3 +1,12 @@
+#pages-wallets {
+
+  .list-link {
+    text-align: center;
+    padding: 36px;
+    color: #8481ea;
+    font-size: 15px;
+  }
+}
 .sky-header-light {
   background-image: linear-gradient(-110deg, #4990e2, #b87eea);
   width: 100%;
