--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,7 +1,9 @@
 // http://ionicframework.com/docs/v2/theming/
 
 $gradient-blue-dark: #0072ff;
+$gradient-blue-dark-transparent: rgba(0, 114, 255, 0.7);
 $gradient-blue-light: #00C3ff;
+$gradient-blue-light-transparent: rgba(0, 195, 255, 0.7);
 
 h1 {
   color: white;
