Add wallets page

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -8,9 +8,12 @@ $gradient-blue-light-transparent: rgba(0, 195, 255, 0.7);
 h1 {
   color: white;
   text-align: center;
-  line-height: 150px;
   font-size: 40px;
   margin: 0;
+}
+
+.scroll-content {
+  margin-top: 0 !important;
 }
 
 .split-background {
@@ -51,7 +54,68 @@ ion-buttons {
   background: -webkit-linear-gradient(left top, $gradient-blue-dark, $gradient-blue-light); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(bottom right, $gradient-blue-dark, $gradient-blue-light); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(bottom right, $gradient-blue-dark, $gradient-blue-light); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to bottom right, $gradient-blue-dark, $gradient-blue-light); /* Standard syntax */font-family: 'Titillium Web', sans-serif;
+  background: linear-gradient(to bottom right, $gradient-blue-dark, $gradient-blue-light); /* Standard syntax */
   height: 100%;
   width: 100%;
+}
+
+.primary-gradient {
+  background: $gradient-blue-dark; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, $gradient-blue-dark, $gradient-blue-light); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, $gradient-blue-dark, $gradient-blue-light); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, $gradient-blue-dark, $gradient-blue-light); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, $gradient-blue-dark, $gradient-blue-light); /* Standard syntax */
+}
+
+.primary-header-background {
+  background: $gradient-blue-dark; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, $gradient-blue-dark-transparent, $gradient-blue-light-transparent), url('../assets/img/header.png') center center no-repeat; /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, $gradient-blue-dark-transparent, $gradient-blue-light-transparent), url('../assets/img/header.png') center center no-repeat; /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, $gradient-blue-dark-transparent, $gradient-blue-light-transparent), url('../assets/img/header.png') center center no-repeat; /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, $gradient-blue-dark-transparent, $gradient-blue-light-transparent), url('../assets/img/header.png') center center no-repeat; /* Standard syntax */
+}
+
+.column-80 {
+  display: inline-block;
+  width: 80%;
+}
+
+.column-70 {
+  display: inline-block;
+  width: 70%;
+}
+
+.column-60 {
+  display: inline-block;
+  width: 60%;
+}
+
+.column-50 {
+  display: inline-block;
+  width: 50%;
+}
+
+.column-40 {
+  display: inline-block;
+  width: 40%;
+}
+
+.column-30 {
+  display: inline-block;
+  width: 30%;
+}
+
+.column-25 {
+  display: inline-block;
+  width: 25%;
+}
+
+.column-20 {
+  display: inline-block;
+  width: 20%;
+}
+
+.column-15 {
+  display: inline-block;
+  width: 15%;
 }
