--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,6 +38,8 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
+$primary-color: #0072ff;
+
 $text-color-dark: #fff;
 $text-color-normal: #1d2127;
 $text-color-light: #b8b8b8;
