--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -119,3 +119,10 @@ ion-buttons {
   display: inline-block;
   width: 15%;
 }
+
+
+.warning-text {
+  color: #fb003d;
+  font-size: 12px;
+  font-weight: 700;
+}
