--- a/src/pages/wallet-detail/wallet-detail.scss
+++ b/src/pages/wallet-detail/wallet-detail.scss
@@ -1,7 +1,46 @@
-.sky-header-dark {
-  background-image: linear-gradient(-155deg, #686e96, #373b5c);
-  width: 100%;
-  height: 150px;
+#pages-wallet-detail {
+  background-color: $background-color-normal;
+
+  .-header {
+    min-height: 170px;
+    padding: 80px 0 0 0;
+    width: 100%;
+  }
+
+  h1 span {
+    font-size: 20px;
+  }
+
+  ion-item-divider {
+    min-height: 50px;
+    padding-right: 32px;
+  }
+
+  button.item .item-inner {
+    font-size: 13px;
+    min-height: 69px;
+  }
+
+  .-action-buttons {
+    padding: 40px 0 20px;
+    margin-bottom: 66px;
+    text-align: center;
+
+    button {
+      background-color: $background-color-normal;
+      box-shadow: none;
+      color: $text-color-normal;
+      font-size: 13px;
+      margin: 0 5px;
+      min-width: 140px;
+
+      img {
+        height: 28px;
+        margin-left: -4px;
+        width: 28px;
+      }
+    }
+  }
 }
 
 .is-hidden { display: none; }
