--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -120,6 +120,11 @@ ion-buttons {
   width: 15%;
 }
 
+.column-10 {
+  display: inline-block;
+  width: 10%;
+}
+
 
 .warning-text {
   color: #fb003d;
