--- a/src/pages/add-wallet/add-wallet.scss
+++ b/src/pages/add-wallet/add-wallet.scss
@@ -2,26 +2,48 @@ page-add-wallet {
   background-color: $background-color-light;
 
   ion-header {
+    background-color: #F7F7F7;
+    ion-navbar {
+     min-height: 50px !important;
+    }
     button, .toolbar-title {
-      font-size: 13px;
-      color: $primary-color !important;
+      font-size: 14px;
+      line-height: 30px;
+      font-weight: bold;
+      text-align: center;
+      letter-spacing: 7.69%;
+      color: #1E2227 !important;
+    }
+    .ion-icon-botton {
+      width: 32px;
+      height: 32px;
+      margin: 0;
+      padding: 0;
+    }
+    ion-icon {
+      color: rgba(30, 34, 39, 0.2);
+      margin: 9px;
     }
   }
 
   #-add-seed-form {
     padding: 32px;
 
+    .text-input-md {
+      margin: 10px 14px 10px 10px !important;
+  }
+
     .form-group {
       ion-input, ion-textarea {
         border: 2px solid #eff0f0;
         border-radius: 5px;
         color: $text-color-normal;
-        font-size: 12px;
+        font-size: 14px;
+
       }
 
       ion-label {
-        font-size: 13px;
-        line-height: 32px;
+        font-size: 14px;
       }
 
 
@@ -30,18 +52,26 @@ page-add-wallet {
       }
     }
 
+    .buttons-container {
+      position: relative;
+      width: 100%;
+      left: 0;
+      margin-top: 80px;
+    }
+
     .buttons {
       width: 100%;
       padding: 32px 0;
       text-align: center;
 
       button {
+        text-transform: capitalize;
         border: 2px solid #eff0f0;
         box-shadow: none;
-        font-size: 13px;
+        font-size: 15px;
         height: 50px;
         margin: 0 10px;
-        min-width: 120px;
+        width: 120px;
 
         &.-light {
           background-color: $background-color-light;
@@ -50,13 +80,21 @@ page-add-wallet {
 
         &.-main {
           background: $gradient-blue-dark; /* For browsers that do not support gradients */
-          background: -webkit-linear-gradient(left top, $gradient-blue-dark, $gradient-blue-light); /* For Safari 5.1 to 6.0 */
-          background: -o-linear-gradient(bottom right, $gradient-blue-dark, $gradient-blue-light); /* For Opera 11.1 to 12.0 */
-          background: -moz-linear-gradient(bottom right, $gradient-blue-dark, $gradient-blue-light); /* For Firefox 3.6 to 15 */
-          background: linear-gradient(to bottom right, $gradient-blue-dark, $gradient-blue-light); /* Standard syntax */
+          background: -webkit-linear-gradient(left top, #0072FF, #00C3FF); /* For Safari 5.1 to 6.0 */
+          background: -o-linear-gradient(bottom right, #0072FF, #00C3FF); /* For Opera 11.1 to 12.0 */
+          background: -moz-linear-gradient(bottom right, #0072FF, #00C3FF); /* For Firefox 3.6 to 15 */
+          background: linear-gradient(to bottom right, #0072FF, #00C3FF); /* Standard syntax */
           color: white;
         }
       }
+    }
+
+    .check-confirm {
+      float: right;
+      margin: -10px -5px 0px 0px;
+      z-index: 50;
+      position: relative;
+      color: #00DF80;
     }
   }
 }
