--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -11,22 +11,28 @@ modal {
     background-color: #fbfbfb;
     border-radius: 4px;
     position: absolute;
-    top: 30%;
+    top: 25%;
+    width: 100%;
     -webkit-transform: translateY(-30%);
     -moz-transform: translateY(-30%);
     -ms-transform: translateY(-30%);
     -o-transform: translateY(-30%);
     transform: translateY(-30%);
 
+    -webkit-box-shadow: 0px 0px 30px 0px rgba(189, 189, 189, 1);
+    -moz-box-shadow: 0px 0px 30px 0px rgba(189, 189, 189, 1);
+    box-shadow: 0px 0px 30px 0px rgba(189, 189, 189, 1);
+
     .-header {
       border-top-left-radius: 4px;
       border-top-right-radius: 4px;
       background-color: #f7f7f7;
       border-bottom: 1px solid #eee;
-      color: #fb003d;
+      color: #1e2227;
       line-height: 40px;
       min-height: 40px;
       text-align: center;
+      font-size: 14px;
     }
 
     .-body {
@@ -52,8 +58,6 @@ modal {
 
         margin-bottom: 25px;
       }
-
-
 
       .-continue {
         //background-color: #ececed;
