--- a/src/components/sky-header/sky-header.html
+++ b/src/components/sky-header/sky-header.html
@@ -22,7 +22,7 @@
       </ion-row>
       <ion-row>
         <ion-col col-12>
-          <span class="sky-money">${{money}} (${{sec_money}})</span>
+          <span class="sky-money">${{money}} (${{secMoney}})</span>
         </ion-col>
       </ion-row>
       <ion-row>
