--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -3,13 +3,13 @@
     <ion-grid>
       <ion-row>
         <ion-col col-4>
-          <ion-icon ios="ios-arrow-back" md="md-arrow-back" style="float: left;"></ion-icon>
+          <ion-icon *ngIf="backAction" name="sky-back" style="float: left;"></ion-icon>
         </ion-col>
         <ion-col col-4>
-          <ion-title>Page1</ion-title>
+          <ion-title>{{title}}</ion-title>
         </ion-col>
         <ion-col col-4>
-          <ion-icon ios="ios-refresh" md="md-refresh" style="float: right;"></ion-icon>
+          <ion-icon name="sky-refresh" style="float: right;"></ion-icon>
         </ion-col>
       </ion-row>
       <ion-row>
