--- a/src/pages/wallets/wallets.scss
+++ b/src/pages/wallets/wallets.scss
@@ -1,5 +1,14 @@
-wallets {
-  margin-top: 174px;
+$screen-padding: 32px;
+
+#pages-wallets {
+  background-color: $background-color-normal;
+
+  .-header {
+    min-height: 250px;
+    padding: 100px 0 0 0;
+    width: 100%;
+  }
+
   h1 span {
     font-size: 20px;
   }
