--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -18,28 +18,28 @@ app-header {
         rgba(0, 130, 255, 0.76) 30%,
         rgba(0, 195, 255, 0.2) 100%
     ),
-    url("../../assets/img/header.png") center center no-repeat; /* For Safari 5.1 to 6.0 */
+    url("../assets/img/header.png") center center no-repeat; /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(
         bottom right,
         rgba(0, 114, 255, 1) 0%,
         rgba(0, 130, 255, 0.76) 30%,
         rgba(0, 195, 255, 0.2) 100%
     ),
-    url("../../assets/img/header.png") center center no-repeat; /* For Opera 11.1 to 12.0 */
+    url("../assets/img/header.png") center center no-repeat; /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(
         bottom right,
         rgba(0, 114, 255, 1) 0%,
         rgba(0, 130, 255, 0.76) 30%,
         rgba(0, 195, 255, 0.2) 100%
     ),
-    url("../../assets/img/header.png") center center no-repeat; /* For Firefox 3.6 to 15 */
+    url("../assets/img/header.png") center center no-repeat; /* For Firefox 3.6 to 15 */
     background: linear-gradient(
         to bottom right,
         rgba(0, 114, 255, 1) 0%,
         rgba(0, 130, 255, 0.76) 30%,
         rgba(0, 195, 255, 0.2) 100%
     ),
-    url("../../assets/img/header.png") center center no-repeat; /* Standard syntax */
+    url("../assets/img/header.png") center center no-repeat; /* Standard syntax */
   }
 
   h1 {
