--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -20,7 +20,7 @@
       </ion-row>
       <ion-row>
         <ion-col col-12>
-          <span class="sky-money">{{balance}}</span>
+          <span class="sky-money">{{getBalance()}}</span>
         </ion-col>
       </ion-row>
       <ion-row>
