--- a/src/pages/pincode/pincode.scss
+++ b/src/pages/pincode/pincode.scss
@@ -6,6 +6,10 @@ ion-content#pincode {
     width: 100%;
 }
 
+.slide-zoom {
+    height: 100%;
+}
+
 #restartbtn {
     text-align: center;
     color: #fff;
@@ -32,6 +36,10 @@ ion-content#pincode {
     max-width: 40%;
 }
 
+.cell-header {
+    height: 95px;
+}
+
 .pin-instructions {
     padding: 0 20px;
     color: white;
@@ -53,8 +61,6 @@ ion-content#pincode {
     z-index: 9999;
     color: #fff;
     text-align: center;
-    -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.6);
-    -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.6);
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.6);
 }
 
@@ -64,8 +70,6 @@ ion-content#pincode {
     margin: 0 auto;
     position: relative;
     display: block;
-    -webkit-transition: all 1s ease-out;
-    -moz-transition: all 1s ease-out;
     transition: all 1s ease-out;
     opacity: 1;
 }
@@ -227,4 +231,11 @@ ion-col {
             }
         }
     }
+}
+
+ion-toggle{
+  margin: 0 auto;
+  width: 234px;
+  height: 36px;
+  border-radius: 100px;
 }
